+ added better blacklist dialog (flori)
+ added notification system for yacy messages and terminated crawls (flori)
x replace contents.rdf files with newer chrome.manifest (flori)
+ added YaCyBookmarkService (firefox 3 only) (flori)
+ added verify-Option to search preferences (flori)

v 0.2.5 - 31.03.2008
=====================================================================
+ added link to own peer stats at statusbar (daburna) 
+ enhanced contentarea: add bookmark, blacklist and accesskeys (daburna)
+ made install.rdf ready for firefox 3 (daburna)
+ added localized description (daburna)
x fixed problem with wrong demopeerlist saved in about:config (flori)
x fixed "bgLoadURL not found" (flori)
x fixed problem with yacybar_crawljobs.rdf (flori)
x fixed not connected statusbar (flori)
+ added https-support (flori)
+ added passwordmanagment for firefox3 (flori)
+ added error handling for bookmarkmenu and surftipsmenu (flori)
+ moved preferences to single dialog accessable from addon-manager and yacybar (flori)

v 0.2.4 - 05.02.2008
=====================================================================
+ added new iconset (daburna)
+ added folder for add bookmark (daburna)
+ added mediasearch (daburna)
+ added property-files for translating .js files (daburna)
+ added UTF-8 for all xml files (daburna)
+ added missing css for QPH at statusbar (daburna)
x fixed problem with resource (daburna)
x fixed missing translations (daburna)
- removed "order by"-function (daburna)

v 0.2.3 - 23.01.2008
=====================================================================
+ added entitys (daburna)
+ added english languagefile (daburna)
+ added german languagefile (daburna)

v 0.2.2 - 15.01.2008
=====================================================================
+ added QPH at statusbar (daburna)
x fixed wrong demopeerlist (daburna)