@@ -77,6 +77,9 @@
 <!ENTITY prefs.tabpanel.hbox.checkbox.label.remote "Remote Indexierung">
 <!ENTITY prefs.tabpanel.hbox.checkbox.label.stop "Statische Stopp-Wörter ausschliessen">
 <!ENTITY prefs.tabpanel.description.searching "Einstellungen, die für die Suche benutzt werden sollen.">
+<!ENTITY prefs.tabpanel.label.value.kind "Art der Suche">
+<!ENTITY prefs.tabpanel.menuitem.label.standard "Standard">
+<!ENTITY prefs.tabpanel.menuitem.label.compare "Suchmaschinenvergleich">
 <!ENTITY prefs.tabpanel.label.value.content "Inhalt">
 <!ENTITY prefs.tabpanel.menuitem.label.text "Text">
 <!ENTITY prefs.tabpanel.menuitem.label.image "Bilder">
